# justedit-gtk4

./: .clangd  CMakeLists.txt
src/gui/: justedit.cmb  justedit.ui
src/justedit/: CMakeLists.txt
src/justedit/include/: main.hpp
src/justedit/source/: main.cpp
